# mach

./: .prettierrc  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  SPEC.md  astro.config.mjs  dist-workspace.toml  instant.perms.ts  instant.schema.ts  package.json  pnpm-lock.yaml  release.toml
crates/mach/: Cargo.toml
crates/mach/src/: cli.rs  lib.rs  main.rs
crates/mach/src/cmd/: add.rs  list.rs  mod.rs
crates/mach/src/entity/: config.rs  mod.rs  todo.rs
crates/mach/src/service/: config.rs  connection.rs  mod.rs  todo.rs
crates/mach/src/tui/: actions.rs  cursor.rs  draw.rs  input.rs  mod.rs  modes.rs  palette.rs  state.rs  terminal.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/content/docs/: index.mdx
src/content/docs/reference/: keyboard-shortcuts.md
src/lib/: instant.ts  team.svelte.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/todos/: +page.svelte
