[package]
name = "mach"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono.workspace = true
clap.workspace = true
color-print.workspace = true
crossterm.workspace = true
directories.workspace = true
miette.workspace = true
ratatui.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
turso.workspace = true
uuid.workspace = true
