[package]
name = "mach"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
chrono.workspace = true
clap.workspace = true
color-print.workspace = true
crossterm.workspace = true
directories.workspace = true
miette.workspace = true
ratatui.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
turso.workspace = true
uuid.workspace = true
